src/objects/Client_Contact_Address__c.object
<CustomObject>
    <fields>
        <fullName>Area_Town__c</fullName>
        <label>Area/Town</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City_County__c</fullName>
        <label>City/County</label>
        <picklist>
            <picklistValues>
                <fullName>Antrim</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Armagh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Carlow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cavan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clare</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cork</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Derry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Don&apos;t Know</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Donegal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Down</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dublin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fermanagh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Galway</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kerry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kildare</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kilkenny</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Laois</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Leitrim</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Limerick</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Longford</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Louth</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mayo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meath</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monaghan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Offaly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Roscommon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sligo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tipperary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tyrone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Waterford</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Client__c</fullName>
        <label>Client</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Client Contact Addresses</relationshipLabel>
        <relationshipName>Client_Contact_Addresses</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <label>County</label>
        <picklist>
            <picklistValues>
                <fullName>Antrim</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Armagh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Carlow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cavan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clare</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cork</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Derry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Donegal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Down</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dublin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fermanagh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Galway</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kerry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kildare</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kilkenny</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Laois</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Leitrim</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Limerick</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Longford</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Louth</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mayo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meath</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monaghan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Offaly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Roscommon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sligo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tipperary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tyrone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Waterford</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Westmeath</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>LegacyDate__c</fullName>
        <label>Legacy Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <label>Street</label>
        <type>TextArea</type>
    </fields>
    <label>Client Contact Address</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ADR-{00000}</displayFormat>
        <label>Ref</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Client Contact Addresses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>